--- a/realestatefrontend/src/App.css
+++ b/realestatefrontend/src/App.css
@@ -1,6 +1,15 @@
+
+/* App.css */
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+.main-content {
+  flex: 1;
+}
+
 
 .App-logo {
   height: 40vmin;
