--- a/realestatefrontend/src/Component/Dashboard/OwnerDashboard.css
+++ b/realestatefrontend/src/Component/Dashboard/OwnerDashboard.css
@@ -44,7 +44,7 @@
     border-radius: 5px;
   }
   
-  button {
+  .add-property-button {
     background-color: #007bff;
     color: #fff;
     border: 0.5px;
